[metadata]
name = "MDEnvironment"
version = attr: mdenvironment.__version__

[options]
packages = find:
install_requires =
  requests
  importlib
  mdtraj
  numpy
  matplotlib
  boost-histogram
  tqdm
  xarray
  python_version >= "3.6"

[options.extras_require]
opt = numpy>=1.21; numba; jax; jaxlib
numba = numpy>=1.21; numba
jax = numpy>=1.21; jax; jaxlib

[tool:pytest]
testpaths = tests
minversion = 6.0
norecursedirs =
  venv
  MDEnvironment
  *.git
  *.egg-info
  .idea
  docs