[metadata]
name = "MDEnvironment"
version = attr: mdenvironment.__version__

[options]
packages = find:
install_requires =
  requests
  mdtraj >= "1.5"
  numpy
  matplotlib
  tqdm
  python_version >= "3.6"

[options.extras_require]
all = numpy>=1.21; numba; jax; jaxlib; xarray
numba = numpy>=1.21; numba
jax = numpy>=1.21; jax; jaxlib

[tool:pytest]
testpaths = tests
minversion = 6.0
norecursedirs =
  venv
  MDEnvironment
  *.git
  *.egg-info
  .idea
  docs
