[metadata]
name = "speadi"
version = attr: speadi.__version__

[options]
python_requires = >=3.7
packages = find:
install_requires =
  importlib_metadata
  requests
  mdtraj>=1.5
  numpy
  matplotlib
  tqdm

[options.extras_require]
all = numpy>=1.21; numba; jax; jaxlib; xarray
numba = numpy>=1.21; numba
jax = numpy>=1.21; jax; jaxlib

[tool:pytest]
testpaths = tests
minversion = 6.0
norecursedirs =
  venv
  speadi
  *.git
  *.egg-info
  .idea
  docs
